# gcode-proxy

./: .gitignore  README.md  TRIGGERS.md  config.example.yaml  pyproject.toml
docs/: arch.tldr
src/gcode_proxy/: __init__.py  cli.py  config.py  connection_manager.py  core.py  device.py  handlers.py  logging.py  server.py  service.py  task_queue.py  trigger.py  trigger_manager.py  triggers_config.py  utils.py
src/gcode_proxy/core/: __init__.py  config.py  connection_manager.py  logging.py  server.py  service.py  task.py  utils.py
src/gcode_proxy/device/: __init__.py  device.py  dry_run_device.py  grbl_device.py  grbl_device_status.py  interface.py
src/gcode_proxy/trigger/: __init__.py  trigger.py  trigger_manager.py  triggers_config.py
tests/: __init__.py  test_config.py  test_device_discovery.py  test_device_state.py  test_device_synchronize.py  test_gcode_logging.py  test_handlers.py  test_state_parsing.py  test_triggers.py  test_two_stage_triggers.py
tests/triggers/: __init__.py  test_state_triggers.py
